--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/to-html": "^5.0.0",
     "@radix-ui/react-slot": "^1.2.4",
+    "@sanity/client": "^7.13.2",
+    "@sanity/image-url": "^2.0.2",
+    "@sanity/vision": "^5.1.0",
     "@stripe/stripe-js": "^8.6.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.39.0",
@@ -25,11 +29,14 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.446.0",
     "next": "15.1.9",
+    "next-sanity": "^12.0.5",
     "openai": "^6.10.0",
-    "react": "19.1.2",
-    "react-dom": "19.1.2",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "sanity": "^5.1.0",
     "sonner": "^2.0.7",
     "stripe": "^20.1.0",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
